--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "dev": "nodemon src/server.ts",
     "start": "node dist/server.js"
   },
   "author": "",
