--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "dev": "nodemon src/server.ts",
-    "start": "node dist/server.js"
+    "dev": "APP_ENV=dev nodemon src/server.ts",
+    "start": "APP_ENV=prod node dist/server.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
