--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
+    "build": "npx tsc && cp src/config.yaml dist/config.yaml",
     "dev": "APP_ENV=dev nodemon src/server.ts",
     "start": "APP_ENV=prod node dist/server.js"
   },
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "yaml": "^2.6.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
